Added the path again

--- a/css/index.html
+++ b/css/index.html
@@ -64,7 +64,7 @@
               }
           </style>
             <div class="col-md-6 text-center">
-              <img src="/css/3 img.png" alt="sivamathivanan" class="img-fluid w-70">
+              <img src="./css/3 img.png" alt="sivamathivanan" class="img-fluid w-70">
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
           <div class="row ">
             <div class="col-md-3 ">
               <div class="card text-center">
-                <img src="/css/html new.png" class="card-img-top w-25 m-auto pt-4 " alt="html">
+                <img src="./css/html new.png" class="card-img-top w-25 m-auto pt-4 " alt="html">
                 <div class="card-body">
                   <h5 class="card-title">HTML</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -88,7 +88,7 @@
             </div>
             <div class="col-md-3">
               <div class="card text-center">
-                <img src="/css/css new.png" class="card-img-top w-25 m-auto pt-4 " alt="css">
+                <img src="./css/css new.png" class="card-img-top w-25 m-auto pt-4 " alt="css">
                 <div class="card-body">
                   <h5 class="card-title">CSS</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-3">
               <div class="card text-center">
-                <img src="/css/js new.jpg" class="card-img-top w-25 m-auto pt-4 " alt="js">
+                <img src="./css/js new.jpg" class="card-img-top w-25 m-auto pt-4 " alt="js">
                 <div class="card-body">
                   <h5 class="card-title">Java Script</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-md-3">
               <div class="card text-center">
-                <img src="/css/boot new.png" class="card-img-top w-25 m-auto pt-4" alt="jquery">
+                <img src="./css/boot new.png" class="card-img-top w-25 m-auto pt-4" alt="jquery">
                 <div class="card-body">
                   <h5 class="card-title">Boot Strap</h5>
                   <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
