--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <h2 class="pb-3">HI MY NAME IS SIVAMATHIVANAN</h2>
                         <h4>I AM A STUDENT AT KONGU ENGINEERING COLLEGE,I HAVE A SKILLS ON DEVELOPMENT</h4>
                         <h4 class="pb-3">HTML-CSS-JS-JQUERY-BOOTSTRAP</h4>
-                        <a href="https://wa.me/+916379254678?text=Hello%20Sivamathi!!!" class="btn btn-dark btn-lg" target="_blank">CONTACT WITH ME</a>
-                        <a href="/css/RESUME  [ FINAL ].pdf"class="btn btn-dark btn-lg">RESUME </a>
+                        <a href="https://wa.me/+916379254678?text=Hello Sivamathi!!!" class="btn btn-dark btn-lg" target="_blank">CONTACT WITH ME</a>
+                        <a href="RESUME  [ FINAL ].pdf"class="btn btn-dark btn-lg">RESUME </a>
                         
                     </div>
                 </div>
@@ -64,7 +64,7 @@
               }
           </style>
             <div class="col-md-6 text-center">
-              <img src="./css/3 img.png" alt="sivamathivanan" class="img-fluid w-70">
+              <img src="./image/3 img.png" alt="sivamathivanan" class="img-fluid w-70">
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
           <div class="row ">
             <div class="col-md-3 ">
               <div class="card text-center">
-                <img src="./css/html new.png" class="card-img-top w-25 m-auto pt-4 " alt="html">
+                <img src="./image/html new.png" class="card-img-top w-25 m-auto pt-4 " alt="html">
                 <div class="card-body">
                   <h5 class="card-title">HTML</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -88,7 +88,7 @@
             </div>
             <div class="col-md-3">
               <div class="card text-center">
-                <img src="./css/css new.png" class="card-img-top w-25 m-auto pt-4 " alt="css">
+                <img src="./image/css new.png" class="card-img-top w-25 m-auto pt-4 " alt="css">
                 <div class="card-body">
                   <h5 class="card-title">CSS</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-3">
               <div class="card text-center">
-                <img src="./css/js new.jpg" class="card-img-top w-25 m-auto pt-4 " alt="js">
+                <img src="./image/js new.jpg" class="card-img-top w-25 m-auto pt-4 " alt="js">
                 <div class="card-body">
                   <h5 class="card-title">Java Script</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -106,7 +106,7 @@
             </div>
             <div class="col-md-3">
               <div class="card text-center">
-                <img src="./css/boot new.png" class="card-img-top w-25 m-auto pt-4" alt="jquery">
+                <img src="./image/boot new.png" class="card-img-top w-25 m-auto pt-4" alt="jquery">
                 <div class="card-body">
                   <h5 class="card-title">Boot Strap</h5>
                   <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
